--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -29,6 +29,12 @@
         </view>
     </view>
 
+    <!-- 检测登录态测试 -->
+    <view class="uploader">
+        <view class="uploader-text" bindtap="doRequest">
+            <text>检测登录态</text>
+        </view>
+    </view>
 
     <!-- 上传图片测试 -->
     <view class="uploader">
